added README howto and log correction